WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216643
[JSC] Async generator default-export is not handled
https://bugs.webkit.org/show_bug.cgi?id=216643
Summary
[JSC] Async generator default-export is not handled
Yusuke Suzuki
Reported
2020-09-17 03:53:35 PDT
[JSC] Async generator default-export is not handled
Attachments
Patch
(5.27 KB, patch)
2020-09-17 03:54 PDT
,
Yusuke Suzuki
ross.kirsling
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-09-17 03:54:38 PDT
Created
attachment 409019
[details]
Patch
Ross Kirsling
Comment 2
2020-09-17 10:16:25 PDT
Comment on
attachment 409019
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409019&action=review
r=me. What a surprising way for us to have something not work, haha.
> JSTests/modules/async-generator-default.js:4 > +async function * test2() { }
Is this needed?
Yusuke Suzuki
Comment 3
2020-09-17 10:17:21 PDT
Comment on
attachment 409019
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409019&action=review
>> JSTests/modules/async-generator-default.js:4 >> +async function * test2() { } > > Is this needed?
Oops, removed.
Yusuke Suzuki
Comment 4
2020-09-17 10:54:33 PDT
Committed
r267199
: <
https://trac.webkit.org/changeset/267199
>
Radar WebKit Bug Importer
Comment 5
2020-09-17 10:55:16 PDT
<
rdar://problem/69081403
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug