[JSC] Async generator default-export is not handled https://bugs.webkit.org/show_bug.cgi?id=216643

Reviewed by Ross Kirsling.

JSTests:

* modules/async-generator-default.js: Added.
(from.string_appeared_here.import.test.from.string_appeared_here.async test2):
* modules/async-generator-default/module.js: Added.
(export.default.async test):
* test262/expectations.yaml:

Source/JavaScriptCore:

`export default async function * test() { }` syntax should be correctly handled.
This patch adds the code retrieving "test" name from the above declaration correctly.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseExportDeclaration):

Canonical link: https://commits.webkit.org/229473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267199 268f45cc-cd09-0410-ab3c-d52691b4dbfc